// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`changePassword should render correctly 1`] = `
<Component
  description="Change Password page of the Fares data build tool"
  errors={Array []}
  title="Change Password - Fares data build tool"
>
  <CsrfForm
    action="/api/changePassword"
    csrfToken=""
    method="post"
  >
    <ErrorSummary
      errors={Array []}
    />
    <div
      className="govuk-form-group "
    >
      <fieldset
        aria-describedby="change-password-page-heading"
        className="govuk-fieldset"
      >
        <legend
          className="govuk-fieldset__legend govuk-fieldset__legend--l"
        >
          <h1
            className="govuk-fieldset__heading"
            id="change-password-page-heading"
          >
            Change your password
          </h1>
        </legend>
        <p
          className="govuk-hint hint-text"
          id="change-password-page-hint"
        >
          Your password should be at least 8 characters long
        </p>
        <div
          className="govuk-form-group"
        >
          <label
            className="govuk-label"
            htmlFor="old-password"
          >
            Old password
          </label>
          <FormElementWrapper
            errorClass="govuk-input--error"
            errorId="old-password"
            errors={Array []}
          >
            <input
              aria-describedby="change-password-page-hint"
              className="govuk-input"
              id="old-password"
              name="oldPassword"
              spellCheck="false"
              type="password"
            />
          </FormElementWrapper>
        </div>
        <div
          className="govuk-form-group"
        >
          <label
            className="govuk-label"
            htmlFor="new-password"
          >
            New password
          </label>
          <FormElementWrapper
            errorClass="govuk-input--error"
            errorId="new-password"
            errors={Array []}
          >
            <input
              aria-describedby="change-password-page-hint"
              className="govuk-input"
              id="new-password"
              name="newPassword"
              spellCheck="false"
              type="password"
            />
          </FormElementWrapper>
        </div>
        <div
          className="govuk-form-group"
        >
          <label
            className="govuk-label"
            htmlFor="confirm-new-password"
          >
            Confirm new password
          </label>
          <FormElementWrapper
            errorClass="govuk-input--error"
            errorId="confirm-new-password"
            errors={Array []}
          >
            <input
              aria-describedby="change-password-page-hint"
              className="govuk-input"
              id="confirm-new-password"
              name="confirmNewPassword"
              spellCheck="false"
              type="password"
            />
          </FormElementWrapper>
        </div>
      </fieldset>
    </div>
    <input
      className="govuk-button govuk-!-margin-right-1"
      data-module="govuk-button"
      id="change-password-button"
      name="changePassword"
      type="submit"
      value="Change Password"
    />
    <a
      className="govuk-button govuk-button--secondary"
      data-module="govuk-button"
      draggable="false"
      href="/account"
      id="cancel-change-password-button"
      role="button"
    >
      Cancel
    </a>
  </CsrfForm>
</Component>
`;

exports[`changePassword should render error messaging when errors are passed 1`] = `
<Component
  description="Change Password page of the Fares data build tool"
  errors={
    Array [
      Object {
        "errorMessage": "Passwords do not match",
        "id": "password",
      },
    ]
  }
  title="Change Password - Fares data build tool"
>
  <CsrfForm
    action="/api/changePassword"
    csrfToken=""
    method="post"
  >
    <ErrorSummary
      errors={
        Array [
          Object {
            "errorMessage": "Passwords do not match",
            "id": "password",
          },
        ]
      }
    />
    <div
      className="govuk-form-group govuk-form-group--error"
    >
      <fieldset
        aria-describedby="change-password-page-heading"
        className="govuk-fieldset"
      >
        <legend
          className="govuk-fieldset__legend govuk-fieldset__legend--l"
        >
          <h1
            className="govuk-fieldset__heading"
            id="change-password-page-heading"
          >
            Change your password
          </h1>
        </legend>
        <p
          className="govuk-hint hint-text"
          id="change-password-page-hint"
        >
          Your password should be at least 8 characters long
        </p>
        <div
          className="govuk-form-group"
        >
          <label
            className="govuk-label"
            htmlFor="old-password"
          >
            Old password
          </label>
          <FormElementWrapper
            errorClass="govuk-input--error"
            errorId="old-password"
            errors={
              Array [
                Object {
                  "errorMessage": "Passwords do not match",
                  "id": "password",
                },
              ]
            }
          >
            <input
              aria-describedby="change-password-page-hint"
              className="govuk-input"
              id="old-password"
              name="oldPassword"
              spellCheck="false"
              type="password"
            />
          </FormElementWrapper>
        </div>
        <div
          className="govuk-form-group"
        >
          <label
            className="govuk-label"
            htmlFor="new-password"
          >
            New password
          </label>
          <FormElementWrapper
            errorClass="govuk-input--error"
            errorId="new-password"
            errors={
              Array [
                Object {
                  "errorMessage": "Passwords do not match",
                  "id": "password",
                },
              ]
            }
          >
            <input
              aria-describedby="change-password-page-hint"
              className="govuk-input"
              id="new-password"
              name="newPassword"
              spellCheck="false"
              type="password"
            />
          </FormElementWrapper>
        </div>
        <div
          className="govuk-form-group"
        >
          <label
            className="govuk-label"
            htmlFor="confirm-new-password"
          >
            Confirm new password
          </label>
          <FormElementWrapper
            errorClass="govuk-input--error"
            errorId="confirm-new-password"
            errors={
              Array [
                Object {
                  "errorMessage": "Passwords do not match",
                  "id": "password",
                },
              ]
            }
          >
            <input
              aria-describedby="change-password-page-hint"
              className="govuk-input"
              id="confirm-new-password"
              name="confirmNewPassword"
              spellCheck="false"
              type="password"
            />
          </FormElementWrapper>
        </div>
      </fieldset>
    </div>
    <input
      className="govuk-button govuk-!-margin-right-1"
      data-module="govuk-button"
      id="change-password-button"
      name="changePassword"
      type="submit"
      value="Change Password"
    />
    <a
      className="govuk-button govuk-button--secondary"
      data-module="govuk-button"
      draggable="false"
      href="/account"
      id="cancel-change-password-button"
      role="button"
    >
      Cancel
    </a>
  </CsrfForm>
</Component>
`;
